--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Osere Monday Stephen - Portfolio</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="#">Osere Monday Stephen</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -54,12 +55,32 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>Skills</h2>
-                    <ul class="list-inline">
-                        <li class="list-inline-item mx-3"><strong>PHP</strong></li>
-                        <li class="list-inline-item mx-3"><strong>Laravel</strong></li>
-                        <li class="list-inline-item mx-3"><strong>Vue.js</strong></li>
-                        <li class="list-inline-item mx-3"><strong>Java</strong></li>
-                    </ul>
+                </div>
+                <div class="col-md-6 offset-md-3">
+                    <div class="skill">
+                        <h5>PHP</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h5>Laravel</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h5>Vue.js</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <h5>Java</h5>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -70,10 +91,18 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h2>Projects</h2>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Students Information Management System</h5>
-                        <p class="card-text">A comprehensive system for managing student information efficiently.</p>
+                <div class="card mb-3">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="project-image.jpg" class="card-img" alt="Project Image">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Students Information Management System</h5>
+                                <p class="card-text">A comprehensive system for managing student information efficiently.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -87,6 +116,8 @@
                 <div class="col-md-12 text-center">
                     <h2>Contact Me</h2>
                     <p>Email: stejay4god@gmail.com</p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
+                    <p>GitHub: <a href="https://github.com/yourprofile" target="_blank">GitHub Profile</a></p>
                 </div>
             </div>
         </div>
