--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <a class="navbar-brand" href="#">
             <img src="logo.png" alt="My logo" width="100" height="auto">
             Osere Monday Stephen</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,16 +40,44 @@
 
     <!-- Header Section -->
     <header class="jumbotron text-center bg-primary text-white">
-        <h1 class="display-4">Hello, I'm Osere Monday Stephen</h1>
+        <h1 class="display-4 pt-3">Hello, I'm Osere Monday Stephen</h1>
         <p class="lead">A passionate web developer.</p>
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container my-5">
+    <section id="about" class="container-fluid my-5 p-3 shadow border border-light">
         <div class="row">
-            <div class="col-md-12 text-center">
-                <h2>About Me</h2>
-                <p class="lead">I am a dedicated and passionate web developer with expertise in PHP, Laravel, Vue.js, and Java. I love creating efficient and scalable web applications.</p>
+            <div class="col-md-12 text-justify">
+                <h2 class="text-center">About Me</h2>
+                <p class="lead">
+                    Greetings! I am an experienced web developer with a strong passion for crafting exceptional digital
+                    experiences. My expertise lies in PHP (specifically Laravel), Vue.js, Java, and JavaScript.
+                </p>
+                <p>
+                    I thrive on tackling complex challenges and finding innovative solutions, always aiming to deliver
+                    high-quality and efficient code. With a deep understanding of web development principles and best
+                    practices, I am committed to creating robust and scalable applications.
+                </p>
+                <p>
+                    Continuous learning is at the core of my professional journey. I take great delight in keeping up
+                    with the latest trends and technologies in the ever-evolving web development landscape. This allows
+                    me to leverage cutting-edge tools and frameworks, enabling me to deliver modern and user-friendly
+                    applications.
+                </p>
+                <p>
+                    Collaboration is essential to me. I enjoy working within cross-functional teams, as it promotes
+                    knowledge sharing and brings different perspectives to the table. I strongly believe that effective
+                    communication and teamwork are key to successful project execution.
+                </p>
+                <p>
+                    Overall, I am a dedicated web developer who finds joy in turning ideas into reality. I am eager to
+                    take on new challenges, expand my skill set, and contribute to the success of impactful projects.
+
+                    Please don't hesitate to reach out if you have any questions or if there's anything I can assist you
+                    with. Let's create amazing experiences together!
+
+                    Thank you!
+                </p>
             </div>
         </div>
     </section>
@@ -58,29 +89,38 @@
                 <div class="col-md-12 text-center">
                     <h2>Skills</h2>
                 </div>
-                <div class="col-md-6 offset-md-3">
-                    <div class="skill">
+                <div class="col-12  d-flex ">
+                    <div class="skill col-lg-2 col-md-12">
                         <h5>PHP</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        <div class="circular-progress-bar">
+                            <div class="circle"></div>
+                            <div class="half-circle"></div>
+                            <div class="percentage">50%</div>
                         </div>
                     </div>
-                    <div class="skill">
+                    <div class="skill col-lg-2 col-md-12">
                         <h5>Laravel</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        <div class="circular-progress-bar">
+                            <div class="circle"></div>
+                            <div class="half-circle"></div>
+                            <div class="percentage">50%</div>
                         </div>
+
                     </div>
-                    <div class="skill">
+                    <div class="skill col-lg-2 col-md-12">
                         <h5>Vue.js</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        <div class="circular-progress-bar">
+                            <div class="circle"></div>
+                            <div class="half-circle"></div>
+                            <div class="percentage">50%</div>
                         </div>
                     </div>
-                    <div class="skill">
+                    <div class="skill col-lg-2 col-md-12">
                         <h5>Java</h5>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        <div class="circular-progress-bar">
+                            <div class="circle"></div>
+                            <div class="half-circle"></div>
+                            <div class="percentage">50%</div>
                         </div>
                     </div>
                 </div>
@@ -101,7 +141,8 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Students Information Management System</h5>
-                                <p class="card-text">A comprehensive system for managing student information efficiently.</p>
+                                <p class="card-text">A comprehensive system for managing student information
+                                    efficiently.</p>
                                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                             </div>
                         </div>
@@ -118,7 +159,8 @@
                 <div class="col-md-12 text-center">
                     <h2>Contact Me</h2>
                     <p>Email: stejay4god@gmail.com</p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a>
+                    </p>
                     <p>GitHub: <a href="https://github.com/yourprofile" target="_blank">GitHub Profile</a></p>
                 </div>
             </div>
@@ -134,4 +176,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
